# esp32-wroom-32-AP-Provision

./: .gitignore  AP-Provision.ino  BARK-DETECTOR-README.md  IMPLEMENTATION-COMPLETE.md  README.md  RFE.md  Review.md  SECURITY-IMPLEMENTATION.md  TODO.md  TRAINING.md  WIRING-INMP441.md  WIRING.md  _codeql_detected_source_root  barebones-freertos.cpp  platformio.ini  switch-firmware.sh
.github/: copilot-instructions.md
components/bark_detector/: CMakeLists.txt  README.md  mqtt_provisioning.cpp
components/bark_detector/include/: audio_capture.h  bark_detector_api.h  ca_certificates.h  feature_extractor.h  model_data.h  mqtt_client.h  mqtt_provisioning.h  preprocess.h
components/bark_detector/src/: INMP441-test.cpp  KY-038-test.cpp  audio_capture.cpp  bark_demo.cpp  bark_detector.cpp  ca_certificates.cpp  esp32-wroom-32-AP-Provision.cpp  model_data.h  mqtt_client.cpp  preprocess.cpp  secure_webrtc_dogbark_detector.cpp
data/: bark_model_int8.tflite  secure-index.html
docs/: HOWTO.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  ROUTER-CONFIGURATION.md  SECURE_WEBRTC_DOGBARK_README.md  THEORY-OF-OPERATIONS.md  TRAINING.md  WIRING.md
include/: audio_capture.h  bark_detector_api.h  mqtt_client.h  mqtt_provisioning.h  preprocess.h
src/: audio_capture.cpp  bark_demo.cpp  bark_detector.cpp  bark_detector_api.cpp  esp32-wroom-32-AP-Provision.cpp  ky038-test.cpp  mqtt_client.cpp  mqtt_provisioning.cpp  preprocess.cpp  secure-webrtc-firmware.cpp  secure_webrtc_dogbark_detector.cpp  webrtc-firmware.cpp
